@@ -43,6 +43,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #5639: Add a *server_hostname* argument to ``SSLContext.wrap_socket``
+  in order to support the TLS SNI extension.  ``HTTPSConnection`` and
+  ``urlopen()`` also use this argument, so that HTTPS virtual hosts are now
+  supported.
+
 - Issue #10166: Avoid recursion in pstats Stats.add() for many stats items.
 
 - Issue #10163: Skip unreadable registry keys during mimetypes
